# auto_email_agent

./: .gitignore  EMBEDDING_GUIDE.md  README.md  create_index.py  email_config.yaml.example  model_config.yaml  pyproject.toml  requirements.txt
data/: agency.txt
db/: chroma.sqlite3
src/: agents.py  graph.py  nodes.py  prompts.py  structure_outputs.py
src/config/: model_configs.py
src/embeddings/: embedding_factory.py
src/models/: agent_factory.py  anthropic_agent.py  base_agent.py  openai_agent.py  openrouter_agent.py  zhipuai_agent.py
src/services/: base_service.py  email_categorization_service.py  email_writing_service.py  rag_service.py  service_manager.py
src/tools/: GmailTools.py
src/tools/email/: __init__.py  base_email_client.py  connection_manager.py  email_config.py  email_factory.py  email_parser.py  email_tools.py  imap_smtp_client.py
