[project]
name = "auto-email-agent"
version = "0.1.0"
description = "Automated email management system with AI agents"
requires-python = ">=3.12"
dependencies = [
    "langchain-core",
    "langchain_community",
    "langgraph",
    "langchain-groq",
    "langchain_google_genai",
    "langchain_chroma",
    "chromadb",
    "google-api-python-client",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "beautifulsoup4",
    "python-dotenv",
    "colorama",
    "langserve",
    "sse_starlette",
    "uvicorn",
    "gunicorn",
    "fastapi",
    "zhipuai",
    "httpx[socks]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []